--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,10 @@
 		<div ng-view=""></div>
 	</div>
 
+	<footer class="hidden-md">
+		Footer
+	</footer>
+
 </div>
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
