Create feed card styling.

--- a/app/index.html
+++ b/app/index.html
@@ -38,9 +38,21 @@
 		<div ng-view=""></div>
 	</div>
 
-	<footer class="hidden-md">
-		Footer
-	</footer>
+		<footer class="page-footer hidden-md hidden-lg">
+			<ul class="footer-links footer-links-social">
+				<li>
+					<a href="" class="icon">Contact Us</a>
+				</li>
+				<li>
+					<a href="" class="icon">Privacy Statement </a>
+				</li>
+				<li>
+					<a href="" class="icon">Terms of Sale</a>
+				</li>
+				<li>© 2015 Kopi Aroma</li>
+			</ul>
+		</footer>
+
 
 </div>
 
