--- a/app/index.html
+++ b/app/index.html
@@ -14,26 +14,64 @@
 	<link rel="stylesheet" href="styles/main.css">
 	<!-- endbuild -->
 </head>
-<body ng-app="kopiAromaApp">
+<body ng-app="kopiAromaApp" data-spy="scroll" data-target="#top-navbar">
 <div class="main-wrapper">
 	<!--[if lt IE 7]>
 	<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
 		your browser</a> to improve your experience.</p>
 	<![endif]-->
+	<nav class="navbar main-navbar">
+		<div class="container">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top-navbar">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#/">Brand</a>
+			</div>
 
-	<nav id="menu">
-		<div class="menu wrapper">
-			<nav role="navigation">
-				<ul>
-					<li>menu</li>
-					<li>menu</li>
-					<li>menu</li>
-					<li>menu</li>
-					<li>menu</li>
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="top-navbar">
+				<ul class="nav navbar-nav">
+					<li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+					<li><a href="#product">Link</a></li>
+
 				</ul>
-			</nav>
-		</div>
+
+				<ul class="nav navbar-nav hidden-xs hidden-sm footer-note">
+
+						<li>
+							<a href="">Contact Us</a>
+						</li>
+						<li>
+							<a href="">Privacy Statement </a>
+						</li>
+						<li>
+							<a href="">Terms of Sale</a>
+						</li>
+						<li><a href="">© 2015 Kopi Aroma</a></li>
+
+
+				</ul>
+			</div><!-- /.navbar-collapse -->
+		</div><!-- /.container-fluid -->
 	</nav>
+	<!--<nav id="menu">-->
+		<!--<div class="menu wrapper">-->
+			<!--<nav role="navigation">-->
+				<!--<ul>-->
+					<!--<li>menu</li>-->
+					<!--<li>menu</li>-->
+					<!--<li>menu</li>-->
+					<!--<li>menu</li>-->
+					<!--<li>menu</li>-->
+				<!--</ul>-->
+			<!--</nav>-->
+		<!--</div>-->
+	<!--</nav>-->
 	<div class="main-container">
 		<div ng-view=""></div>
 	</div>
