--- a/app/index.html
+++ b/app/index.html
@@ -30,66 +30,78 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#/">Brand</a>
+				<a class="navbar-brand-large hidden-xs hidden-sm" href="#/">
+
+					<img src="images/logo-main.png" alt="" />
+				</a>
+				<a class="navbar-brand hidden-md hidden-lg" href="#/">
+
+					Well Gro </a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="top-navbar">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-					<li><a href="#product">Link</a></li>
+					<li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
+					<li><a href="#product-anchor">Product</a></li>
+					<!--<li><a href="#?scrollTo=product-anchor">Product</a></li>-->
+					<li><a href="#stats-anchor">Stats</a></li>
+					<li><a href="#social-anchor">Social</a></li>
+					</li>
 
 				</ul>
 
 				<ul class="nav navbar-nav hidden-xs hidden-sm footer-note">
 
-						<li>
-							<a href="">Contact Us</a>
-						</li>
-						<li>
-							<a href="">Privacy Statement </a>
-						</li>
-						<li>
-							<a href="">Terms of Sale</a>
-						</li>
-						<li><a href="">© 2015 Kopi Aroma</a></li>
+					<li>
+						<a href="">Contact Us</a>
+					</li>
+					<li>
+						<a href="">Privacy Statement </a>
+					</li>
+					<li>
+						<a href="">Terms of Sale</a>
+					</li>
+					<li><a href="">© 2015 Kopi Aroma</a></li>
 
 
 				</ul>
-			</div><!-- /.navbar-collapse -->
-		</div><!-- /.container-fluid -->
+			</div>
+			<!-- /.navbar-collapse -->
+		</div>
+		<!-- /.container-fluid -->
 	</nav>
 	<!--<nav id="menu">-->
-		<!--<div class="menu wrapper">-->
-			<!--<nav role="navigation">-->
-				<!--<ul>-->
-					<!--<li>menu</li>-->
-					<!--<li>menu</li>-->
-					<!--<li>menu</li>-->
-					<!--<li>menu</li>-->
-					<!--<li>menu</li>-->
-				<!--</ul>-->
-			<!--</nav>-->
-		<!--</div>-->
+	<!--<div class="menu wrapper">-->
+	<!--<nav role="navigation">-->
+	<!--<ul>-->
+	<!--<li>menu</li>-->
+	<!--<li>menu</li>-->
+	<!--<li>menu</li>-->
+	<!--<li>menu</li>-->
+	<!--<li>menu</li>-->
+	<!--</ul>-->
+	<!--</nav>-->
+	<!--</div>-->
 	<!--</nav>-->
 	<div class="main-container">
 		<div ng-view=""></div>
 	</div>
 
-		<footer class="page-footer hidden-md hidden-lg">
-			<ul class="footer-links footer-links-social">
-				<li>
-					<a href="" class="icon">Contact Us</a>
-				</li>
-				<li>
-					<a href="" class="icon">Privacy Statement </a>
-				</li>
-				<li>
-					<a href="" class="icon">Terms of Sale</a>
-				</li>
-				<li>© 2015 Kopi Aroma</li>
-			</ul>
-		</footer>
+	<footer class="page-footer hidden-md hidden-lg">
+		<ul class="footer-links footer-links-social">
+			<li>
+				<a href="" class="icon">Contact Us</a>
+			</li>
+			<li>
+				<a href="" class="icon">Privacy Statement </a>
+			</li>
+			<li>
+				<a href="" class="icon">Terms of Sale</a>
+			</li>
+			<li>© 2015 Kopi Aroma</li>
+		</ul>
+	</footer>
 
 
 </div>
