Add angular scroll.

--- a/app/index.html
+++ b/app/index.html
@@ -42,11 +42,13 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="top-navbar">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
-					<li><a href="#product-anchor">Product</a></li>
+					<li class="active"><a href="#hero-anchor" du-smooth-scroll>Home
+						<span class="sr-only">(current)</span></a></li>
+					<li><a href="#product-anchor" du-smooth-scroll>Product</a></li>
 					<!--<li><a href="#?scrollTo=product-anchor">Product</a></li>-->
-					<li><a href="#stats-anchor">Stats</a></li>
-					<li><a href="#social-anchor">Social</a></li>
+					<!--<li><a href="#stats-anchor">Stats</a></li>-->
+					<li><a href="#stats-anchor" du-smooth-scroll>Stats</a></li>
+					<li><a href="#social-anchor" du-smooth-scroll>Social</a></li>
 					</li>
 
 				</ul>
@@ -62,7 +64,7 @@
 					<li>
 						<a href="">Terms of Sale</a>
 					</li>
-					<li><a href="">© 2015 Kopi Aroma</a></li>
+					<li><a href="">© 2015 WellGro Co.</a></li>
 
 
 				</ul>
@@ -99,7 +101,7 @@
 			<li>
 				<a href="" class="icon">Terms of Sale</a>
 			</li>
-			<li>© 2015 Kopi Aroma</li>
+			<li>© 2015 WellGro Co.</li>
 		</ul>
 	</footer>
 
@@ -130,6 +132,7 @@
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 <script src="bower_components/angular-touch/angular-touch.js"></script>
+<script src="bower_components/angular-scroll/angular-scroll.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
