Clean up and refactor code.

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
 <head>
 	<meta charset="utf-8">
-	<title></title>
+	<title>The Well Gro Company</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width">
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -22,7 +22,6 @@
 	<![endif]-->
 	<nav class="navbar main-navbar">
 		<div class="container">
-			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top-navbar">
 					<span class="sr-only">Toggle navigation</span>
@@ -31,61 +30,39 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand-large hidden-xs hidden-sm" href="#/">
-
 					<img src="images/logo-main.png" alt="" />
 				</a>
-				<a class="navbar-brand hidden-md hidden-lg" href="#/">
-
-					Well Gro </a>
+				<a class="navbar-brand hidden-md hidden-lg" href="#/">Well Gro </a>
 			</div>
 
-			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="top-navbar">
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="#hero-anchor" du-smooth-scroll>Home
 						<span class="sr-only">(current)</span></a></li>
 					<li><a href="#product-anchor" du-smooth-scroll>Product</a></li>
-					<!--<li><a href="#?scrollTo=product-anchor">Product</a></li>-->
-					<!--<li><a href="#stats-anchor">Stats</a></li>-->
 					<li><a href="#stats-anchor" du-smooth-scroll>Stats</a></li>
 					<li><a href="#social-anchor" du-smooth-scroll>Social</a></li>
 					</li>
-
 				</ul>
 
 				<ul class="nav navbar-nav hidden-xs hidden-sm footer-note">
-
 					<li>
-						<a href="">Contact Us</a>
+						<a href="#">Contact Us</a>
 					</li>
 					<li>
-						<a href="">Privacy Statement </a>
+						<a href="#">Privacy Statement </a>
 					</li>
 					<li>
-						<a href="">Terms of Sale</a>
+						<a href="#">Terms of Sale</a>
 					</li>
-					<li><a href="">© 2015 WellGro Co.</a></li>
-
-
+					<li><a href="#">© 2015 WellGro Co.</a></li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
 		</div>
 		<!-- /.container-fluid -->
 	</nav>
-	<!--<nav id="menu">-->
-	<!--<div class="menu wrapper">-->
-	<!--<nav role="navigation">-->
-	<!--<ul>-->
-	<!--<li>menu</li>-->
-	<!--<li>menu</li>-->
-	<!--<li>menu</li>-->
-	<!--<li>menu</li>-->
-	<!--<li>menu</li>-->
-	<!--</ul>-->
-	<!--</nav>-->
-	<!--</div>-->
-	<!--</nav>-->
+
 	<div class="main-container">
 		<div ng-view=""></div>
 	</div>
@@ -93,13 +70,13 @@
 	<footer class="page-footer hidden-md hidden-lg">
 		<ul class="footer-links footer-links-social">
 			<li>
-				<a href="" class="icon">Contact Us</a>
+				<a href="#" class="icon">Contact Us</a>
 			</li>
 			<li>
-				<a href="" class="icon">Privacy Statement </a>
+				<a href="#" class="icon">Privacy Statement </a>
 			</li>
 			<li>
-				<a href="" class="icon">Terms of Sale</a>
+				<a href="#" class="icon">Terms of Sale</a>
 			</li>
 			<li>© 2015 WellGro Co.</li>
 		</ul>
@@ -108,18 +85,6 @@
 
 </div>
 
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-<script>
-	!function (A, n, g, u, l, a, r) {
-		A.GoogleAnalyticsObject = l, A[l] = A[l] || function () {
-			(A[l].q = A[l].q || []).push( arguments )
-		}, A[l].l = +new Date, a = n.createElement( g ),
-			r = n.getElementsByTagName( g )[0], a.src = u, r.parentNode.insertBefore( a, r )
-	}( window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga' );
-
-	ga( 'create', 'UA-XXXXX-X' );
-	ga( 'send', 'pageview' );
-</script>
 
 <!-- build:js(.) scripts/vendor.js -->
 <!-- bower:js -->
