--- a/app/index.html
+++ b/app/index.html
@@ -105,6 +105,7 @@
 <script src="scripts/app.js"></script>
 <script src="scripts/controllers/main.js"></script>
 <script src="scripts/controllers/feed.js"></script>
+<script src="scripts/home.js"></script>
 <!-- endbuild -->
 </body>
 </html>
