Add loading animation.

--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
 				<a class="navbar-brand-large hidden-xs hidden-sm" href="#/">
 					<img src="images/logo-main.png" alt="" />
 				</a>
-				<a class="navbar-brand hidden-md hidden-lg" href="#/">Well Gro </a>
+				<a class="navbar-brand hidden-md hidden-lg" href="#/">Well Gro Co.</a>
 			</div>
 
 			<div class="collapse navbar-collapse" id="top-navbar">
@@ -64,7 +64,7 @@
 	</nav>
 
 	<div class="main-container">
-		<div ng-view=""></div>
+		<div ng-view="" class="animate-view"></div>
 	</div>
 
 	<footer class="page-footer hidden-md hidden-lg">
@@ -98,6 +98,7 @@
 <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 <script src="bower_components/angular-touch/angular-touch.js"></script>
 <script src="bower_components/angular-scroll/angular-scroll.js"></script>
+<script src="bower_components/jquery-animatenumber/jquery.animateNumber.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
